last paper review piccard 1.0 GEAN

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -34,9 +34,9 @@ collection agencies, usually to follow population changes.
 
 The standard approach then is to \emph{geographically harmonise} the data. This
 involves interpolating existing measurements into a common set of
-regions~\citep{Logan2014,Hallisey2017,Allen2018}. \revision{1.18}{Recent
+regions~\citep{Logan2014,Hallisey2017,Allen2018}. Recent
 computational tools have somewhat simplified this
-process~\citep{rey2018spatio}}, but it still involves non-trivial questions:
+process~\citep{rey2018spatio}, but it still involves non-trivial questions:
 which geometry to use as target, how to apportion the variables, or how to
 combine data from different sources. Further, these question do not necessarily
 have optimal answers. Indeed, regardless of how well this process is performed,
@@ -53,16 +53,18 @@ comparison since data are not representative of the same spatial units. (...)"}
 ~\citep{Allen2018}. 
 
 
-\revision{1.1}{In some cases, harmonisation might seem methodologically
-adequate. If a study is focused on a small subregion that is fixed in time, limiting
-and modifying the data to fit that specific region of interest sounds not only
-reasonable, but recommended, even if it comes at the cost of producing artificial data points. However, this view is limited in that it ignores interactions beyond the fixed
+In some cases, harmonisation might seem methodologically adequate. If a study is
+focused on a small subregion that is fixed in time, limiting and modifying the
+data to fit that specific region of interest sounds not only reasonable, but
+recommended, even if it comes at the cost of producing artificial data points.
+However, this view is limited in that it ignores interactions beyond the fixed
 borders: each different portion of the area of interest may belong to larger
 homogeneous processes beyond these arbitrarily defined borders. This effect,
 along with the creation of artificial points, is caused by the geometry mismatch
 between the data and the region of interest. Instead of forcing one set of
 borders into another, our method sidesteps this issue by changing how the data
-is represented and interpreted. It therefore allows researchers to examine changes in both the composition and extent of local areas.
+is represented and interpreted. It therefore allows researchers to examine
+changes in both the composition and extent of local areas.
 
 The main contribution of this paper is a method for longitudinal geographical
 data representation and processing that works with the original data by
@@ -70,7 +72,7 @@ leveraging a network based representation. It enables direct comparison and
 temporal regionalisation without the need to match arbitrarily defined borders.
 Even in the case of a small, temporally fixed, region of interest, our approach
 leads to a better understanding of its dynamics by exploring the related
-data-driven homogeneous regions. }
+data-driven homogeneous regions. 
 
 To allow a proper examination of our method and its results, we built a prototype online
 interactive system using this representation. It enables users to visualise,
@@ -127,18 +129,17 @@ if it commits the fallacy of division). Region F would be similarly split to
 match C, but F would be split and merged with G to match D, potentially leading
 to statistical measurements that do not properly represent either region. 
 
-\revision{2.6.4}{While didactic, this example is not realistic because each
-building is visible in Figure~\ref{fig:intuition}, so we know each individual of
-the tabulation area, which is never the case. Further, real measurements are
-seldom as homogeneous and noise-free as this artificial example.  In this
-example, one possible harmonisation would split region A  in two to provide
-different ancestors to C ($A_C$) and D ($A_D$). Then $A_D$ would not be
-considered when analysing the evolution of C, nor $A_C$ for $D$. This is
-inaccurate, because $A$ was the original state for both evolutions, and we
-should not assume that these processes are disconnected.} Either way, by
-splitting and merging the data to fit arbitrary borders, the harmonisation
-process increases the distance between the data and reality by creating
-artificial data points.
+While didactic, this example is not realistic because each building is visible
+in Figure~\ref{fig:intuition}, so we know each individual of the tabulation
+area, which is never the case. Further, real measurements are seldom as
+homogeneous and noise-free as this artificial example.  In this example, one
+possible harmonisation would split region A  in two to provide different
+ancestors to C ($A_C$) and D ($A_D$). Then $A_D$ would not be considered when
+analysing the evolution of C, nor $A_C$ for $D$. This is inaccurate, because $A$
+was the original state for both evolutions, and we should not assume that these
+processes are disconnected. Either way, by splitting and merging the data to
+fit arbitrary borders, the harmonisation process increases the distance between
+the data and reality by creating artificial data points.
 
 
 \begin{figure}
@@ -180,8 +181,8 @@ artificial data points.
 Instead, we propose a network-based representation. A \emph{network} (also
 called a \emph{graph}) is a collection of entities (nodes) that are related to
 each other (edges). In this case, each different aggregation area is represented
-as a node and we connect nodes that have overlapping geographical areas\revision{1.2}{ in
-different times or are neighbours in the same time}, leading to the network
+as a node and we connect nodes that have overlapping geographical areas in
+different times or are neighbours in the same time, leading to the network
 illustrated on the right of Figure~\ref{fig:intuition}. By partitioning the
 network into connected nodes that are similar, we are effectively identifying
 clusters in the spatio-temporal data, as illustrated by the colours of the nodes
