--- a/paper/main.tex
+++ b/paper/main.tex
@@ -131,7 +131,7 @@
 
 
 \begin{abstract}
-  \revision{1.1/2.1}{This paper proposes a novel method for data-driven
+  This paper proposes a novel method for data-driven
   identification of spatio-temporal homogeneous regions and their dynamics,
   enabling the exploration of their composition and extents.  Using a simple
   network representation, the method enables temporal regionalisation
@@ -148,7 +148,7 @@
   validate our method with illustrative scenarios from Chicago and Toronto, with
   results that match the established literature. The system is publicly
   available, with demographic data for over forty regions in the USA and Canada
-  between 1970 and 2010.}
+  between 1970 and 2010.
 \end{abstract}
 
 \section{Introduction}\label{sec:introduction}
@@ -165,8 +165,8 @@
 
 
 \section{Conclusion}
-The objective of this work was to demonstrate that\revision{2.1}{ temporal
-regionalisation can be performed without geographical harmonisation}. We
+The objective of this work was to demonstrate that temporal
+regionalisation can be performed without geographical harmonisation. We
 proposed an alternative methodology that robustly considers the data in its
 original geography, without the creation of arbitrary artificial data points.
 
@@ -180,22 +180,19 @@ The feedback from experts was positive and most of them were able to extract
 insight from the prototype while indicating interest in using it for their
 research efforts.  Since our interface can be used by non-experts as well, we
 also contributed to scientific dissemination and stakeholder transparency in
-urban sciences. \revision{1.12.6/2.6.5}{Building on the comments
-of the experts and other colleagues exposed to our prototype, a future iteration
-of this prototype would include a simplified interface and faster computation
-times, but more importantly the option to define the region of study and add
-more data. This would also allow for a direct comparison between original and
-harmonised data, to further validate the prototype, and explore if our approach
-offers any new insights. Methodologically, the variable matching step is the
-current manual bottleneck of the system, and the next target for removal.}
-
-
-More importantly, we introduced a new idea that, apparently, was never
-considered in the literature. While significant resources have been invested to
-improve geographical harmonisation, rarely, if at all, has anybody doubted that
-it was really necessary in the first place. \revision{2.1}{We proved that it is 
-not necessary for regionalisation, especially for neighbourhood effects and
-neighbourhood dynamics.}
+urban sciences. Building on the comments of the experts and other colleagues
+exposed to our prototype, a future iteration of this prototype would include a
+simplified interface and faster computation times, but more importantly the
+option to define the region of study and add more data. This would also allow
+for a direct comparison between original and harmonised data, to further
+validate the prototype, and explore if our approach offers any new insights.
+Methodologically, the variable matching step is the current manual bottleneck of
+the system, and the next target for removal. More importantly, we introduced a
+new idea that, apparently, was never considered in the literature. While
+significant resources have been invested to improve geographical harmonisation,
+rarely, if at all, has anybody doubted that it was really necessary in the first
+place. We proved that it is not necessary for regionalisation, especially for
+neighbourhood effects and neighbourhood dynamics.
 
 \censure{
 \section*{Acknowledgement}
