--- a/paper/method.tex
+++ b/paper/method.tex
@@ -270,10 +270,13 @@ over time. These changes are summarised by the two sections identified as
 where each ribbon represents a different trajectory. Since the associated
 regions have different population numbers, the width of each ribbon is
 proportional to the smaller of the populations involved, pairwise. This
-approximation works well in general, but leads to small inconsistencies in some
-specific cases. For instance, in the results for Miami, which is available in
-the supplementary material, the combined width of the ribbons decreases
-slightly, despite an increase in the population numbers.
+approximation is necessary to interpolate two different population numbers into
+one and it works well in general, but it can lead to inconsistencies in some
+specific cases, where some regions can be counted more than once. For instance,
+in the results for Miami, which is available in the supplementary material, the
+combined width of the ribbons decreases over time, despite an increase in the
+population numbers. However, the population numbers presented in the bottom part
+of the interface are correct.
 
 In our example in Figure~\ref{fig:ui}, the orange and green clusters contain
 most of the population and are fairly stable over time. The pink cluster is
